my-test/testsuite_scan/ir/SingleSource/UnitTests/Vector/LSX/lsx-vpickve2gr.ll.err
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/UnitTests/Vector/LSX/lsx-vpickve2gr.c:7:3: error: use of undeclared identifier '__m128i'
    7 |   __m128i __m128i_out, __m128i_result;
      |   ^~~~~~~
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/UnitTests/Vector/LSX/lsx-vpickve2gr.c:8:3: error: unknown type name '__m128'; did you mean '__mfp8'?
    8 |   __m128  __m128_out, __m128_result;
      |   ^~~~~~
      |   __mfp8
note: '__mfp8' declared here
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/UnitTests/Vector/LSX/lsx-vpickve2gr.c:9:3: error: use of undeclared identifier '__m128d'
    9 |   __m128d __m128d_out, __m128d_result;
      |   ^~~~~~~
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/UnitTests/Vector/LSX/lsx-vpickve2gr.c:10:3: error: use of undeclared identifier 'v2u64'
   10 |   v2u64 v2u64_op0, v2u64_op1, v2u64_op2;
      |   ^~~~~
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/UnitTests/Vector/LSX/lsx-vpickve2gr.c:11:3: error: use of undeclared identifier 'v4i32'
   11 |   v4i32 v4i32_op0, v4i32_op1, v4i32_op2;
      |   ^~~~~
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/UnitTests/Vector/LSX/lsx-vpickve2gr.c:19:3: error: use of undeclared identifier 'v2u64_op0'
   19 |   v2u64_op0 = (v2u64){0x000000007d3ac600, 0x0000000000000000};
      |   ^~~~~~~~~
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/UnitTests/Vector/LSX/lsx-vpickve2gr.c:19:16: error: use of undeclared identifier 'v2u64'
   19 |   v2u64_op0 = (v2u64){0x000000007d3ac600, 0x0000000000000000};
      |                ^~~~~
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/UnitTests/Vector/LSX/lsx-vpickve2gr.c:21:13: error: call to undeclared function '__lsx_vpickve2gr_b'; ISO C99 and later do not support implicit function declarations [-Wimplicit-function-declaration]
   21 |   int_out = __lsx_vpickve2gr_b((__m128)v2u64_op0, 0x7);
      |             ^
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/UnitTests/Vector/LSX/lsx-vpickve2gr.c:21:33: error: use of undeclared identifier '__m128'; did you mean '__mfp8'?
   21 |   int_out = __lsx_vpickve2gr_b((__m128)v2u64_op0, 0x7);
      |                                 ^~~~~~
note: '__mfp8' declared here
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/UnitTests/Vector/LSX/lsx-vpickve2gr.c:24:3: error: use of undeclared identifier 'v2u64_op0'
   24 |   v2u64_op0 = (v2u64){0x00a6ffceffb60052, 0xff84fff4ff84fff4};
      |   ^~~~~~~~~
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/UnitTests/Vector/LSX/lsx-vpickve2gr.c:24:16: error: use of undeclared identifier 'v2u64'
   24 |   v2u64_op0 = (v2u64){0x00a6ffceffb60052, 0xff84fff4ff84fff4};
      |                ^~~~~
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/UnitTests/Vector/LSX/lsx-vpickve2gr.c:26:22: error: call to undeclared function '__lsx_vpickve2gr_bu'; ISO C99 and later do not support implicit function declarations [-Wimplicit-function-declaration]
   26 |   unsigned_int_out = __lsx_vpickve2gr_bu((__m128)v2u64_op0, 0xa);
      |                      ^
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/UnitTests/Vector/LSX/lsx-vpickve2gr.c:26:43: error: use of undeclared identifier '__m128'; did you mean '__mfp8'?
   26 |   unsigned_int_out = __lsx_vpickve2gr_bu((__m128)v2u64_op0, 0xa);
      |                                           ^~~~~~
note: '__mfp8' declared here
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/UnitTests/Vector/LSX/lsx-vpickve2gr.c:29:3: error: use of undeclared identifier 'v2u64_op0'
   29 |   v2u64_op0 = (v2u64){0x0101010101010101, 0x7fffffff7fffffff};
      |   ^~~~~~~~~
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/UnitTests/Vector/LSX/lsx-vpickve2gr.c:29:16: error: use of undeclared identifier 'v2u64'
   29 |   v2u64_op0 = (v2u64){0x0101010101010101, 0x7fffffff7fffffff};
      |                ^~~~~
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/UnitTests/Vector/LSX/lsx-vpickve2gr.c:31:33: error: use of undeclared identifier '__m128'; did you mean '__mfp8'?
   31 |   int_out = __lsx_vpickve2gr_b((__m128)v2u64_op0, 0xc);
      |                                 ^~~~~~
note: '__mfp8' declared here
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/UnitTests/Vector/LSX/lsx-vpickve2gr.c:34:3: error: use of undeclared identifier 'v2u64_op0'
   34 |   v2u64_op0 = (v2u64){0xffffffffffffffff, 0xffffffffffffffff};
      |   ^~~~~~~~~
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/UnitTests/Vector/LSX/lsx-vpickve2gr.c:34:16: error: use of undeclared identifier 'v2u64'
   34 |   v2u64_op0 = (v2u64){0xffffffffffffffff, 0xffffffffffffffff};
      |                ^~~~~
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/UnitTests/Vector/LSX/lsx-vpickve2gr.c:36:43: error: use of undeclared identifier '__m128'; did you mean '__mfp8'?
   36 |   unsigned_int_out = __lsx_vpickve2gr_bu((__m128)v2u64_op0, 0x9);
      |                                           ^~~~~~
note: '__mfp8' declared here
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
